--- a/css/aminalstyle.css
+++ b/css/aminalstyle.css
@@ -1,6 +1,6 @@
 body{
 	font-family:'Raleway', sans-serif;
-	background-color:#000;
+	background-color:#000000;
 	font-size:1.7em;
 	text-align:justify;
 }
@@ -14,7 +14,7 @@ body{
     background: -o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0)); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(rgba(0,0,0,0),  rgba(0,0,0,0)); /* For Firefox 3.6 to 15 */
     background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)); /* Standard syntax */
-	margin:10vh;
+	/*margin:5vh;*/
 	margin-bottom:0;
 	padding:0;
 	border-radius:25%;
@@ -36,8 +36,31 @@ body{
 	color:#ddd;
 }
 .aminal-logo-top{
-	height:5vh;
+	height: 8vw;
+	width: 8vw;
 }
+
+a:hover {
+	text-decoration:none;
+}
+
+a {
+	color:#FFF;
+}
+
+a:link{
+	text-decoration:none;
+}
+
+h1{
+	padding-top: 2vh;
+}
+
+.index_content{
+	padding-bottom: 1.4vw;
+	text-align:center;
+}
+	
 .aminal-content{
 	background: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)10%); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)10%); /* For Opera 11.1 to 12.0 */
@@ -45,23 +68,41 @@ body{
     background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7)10%); /* Standard syntax */
 	border-radius:5px;
 	color:#ddd;
-	padding:5%;
+	/*padding:5%;*/
 	padding-top:0;
 	margin-top:0;
 }
 video{
-	position:fixed;
+	position:absolute;
 	z-index:-1;
 	margin:auto;
-	top:-200px;
-	min-width:100vw;
-
-	
+	top:-2vw;
+	min-width:100vw; height:50vw;
 	margin-top:0;
 }
 
+.page{
+	padding-top: 40vw;
+}
+
+.mainVideo{
+	position: absolute;
+	margin: 0 auto;
+}
+
+.aminal-front-col-left{
+	position: left;
+	text-align: justify;
+}
+
+.aminal-front-col-mid{
+	text-align: justify;;
+}
+
 .aminal-front-col-right{
-	/*padding-bottom:100px;*/
+	text-align: justify;
+	position: float right;
+	padding-bottom:10vw;
 }
 
 .aminal-personnel-img{
@@ -69,24 +110,4 @@ video{
 	width:200px;
 	height:200px;
 	margin:2%;
-}
-
-.aminal-project-luna{
-	background-color:rgba(0,0,0,0);
-	margin-bottom:0;
-	padding-bottom:0;
-
-}
-.aminal-project-luna img{
-	width:100%;
-	margin:auto;
-}
-.aminal-luna-right{
-	text-align:right;
-}
-.aminal-project-creepy{
-	background-image:url("assets/image/projects/creepy.png");
-}
-.aminal-project-hollow{
-	background-image:url("assets/image/projects/hollow.png");
 }
